add build media center backend media center frontend edit some frontend

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -35,7 +35,8 @@
     "attachment" : "ملفات المشروع",
     "building_area" : "مساحة البناء",
     "units_number":"عدد الوحدات" ,
-    "models_number": "عدد النموذج"
+    "models_number": "عدد النموذج",
+    "Media Center": "الممركز الاعلامي"
 
 
 }
