--- a/lang/ar.json
+++ b/lang/ar.json
@@ -44,5 +44,6 @@
     "Department title": "عنوان القسم",
     "Department image": "صورة القسم",
     "Add Department": "إضافة قسم",
-    "Assign Region": "اربط المشروع بالمنطقة"
+    "Assign Region": "اربط المشروع بالمنطقة",
+    "Join Us": "انضم الينا"
 }
