added translations in admin dashboard

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -45,5 +45,7 @@
     "Department image": "صورة القسم",
     "Add Department": "إضافة قسم",
     "Assign Region": "اربط المشروع بالمنطقة",
-    "Join Us": "انضم الينا"
+    "Join Us": "انضم الينا",
+    "pages" : "الصفحات",
+    "page" : "الصفحة"
 }
