added url to companies migration - backend - frontend

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -47,5 +47,6 @@
     "Assign Region": "اربط المشروع بالمنطقة",
     "Join Us": "انضم الينا",
     "pages" : "الصفحات",
-    "page" : "الصفحة"
+    "page" : "الصفحة",
+    "url" : "الرابط الإلكتروني"
 }
