phases and units in dashboard

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -48,5 +48,7 @@
     "Join Us": "انضم الينا",
     "pages" : "الصفحات",
     "page" : "الصفحة",
-    "url" : "الرابط الإلكتروني"
+    "url" : "الرابط الإلكتروني",
+    "Phase": "المرحلة",
+    "Phases": "المراحل"
 }
