removed project_id from units table and resource and model, and added migration file,  edited company resource

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -8,7 +8,7 @@
     "name" : "الاسم",
     "is_published" : "منشور",
     "id" : "م",
-    "Main_image" : "الصورة الاساسية",
+    "Main Image" : "الصورة الاساسية",
     "slug" : " slug اسم غير رسمي",
     "Companies" : "الشركات",
     "Company" : "الشركة",
