make phasses like percentag e

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -50,5 +50,6 @@
     "page" : "الصفحة",
     "url" : "الرابط الإلكتروني",
     "Phase": "المرحلة",
-    "Phases": "المراحل"
+    "Phases": "المراحل",
+    "Achieve Percentage": "نسبه الانجاز"
 }
