--- a/lang/ar.json
+++ b/lang/ar.json
@@ -51,5 +51,10 @@
     "url" : "الرابط الإلكتروني",
     "Phase": "المرحلة",
     "Phases": "المراحل",
-    "Achieve Percentage": "نسبه الانجاز"
+    "Achieve Percentage": "نسبه الانجاز",
+    "phone": "الرقم الهاتف",
+    "fax": "الفاكس",
+    "email": "البريد الالكتروني",
+    "convert": "التحويله",
+    "video link": "رابط الفيديو"
 }
