--- a/lang/ar.json
+++ b/lang/ar.json
@@ -58,6 +58,6 @@
     "projects number": "عدد المشاريع",
     "companies number": "عدد الشركات",
     "developed buildings": "عدد وحدات سكنية تم تطويرها",
-    "developing buildings": "عدد وحدات سكنية قيد التطوير",
+    "developing buildings": "عدد وحدات سكنية قيد التطوير"
 
 }
