--- a/lang/ar.json
+++ b/lang/ar.json
@@ -64,6 +64,8 @@
     "Accreditation Number": "رقم الاعتماد",
     "logo": "الشعار",
     "project photos": "صور المشروع",
-    "cover photo": "الصورة الخارجيه"
+    "cover photo": "الصورة الخارجيه",
+    "banner": "بانر",
+    "Project partners": "شركاءة المشروع"
 
 }
