validation in country

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -66,6 +66,6 @@
     "project photos": "صور المشروع",
     "cover photo": "الصورة الخارجيه",
     "banner": "بانر",
-    "Project partners": "شركاءة المشروع"
+    "Project partners": "شركاء المشروع"
 
 }
