--- a/lang/ar.json
+++ b/lang/ar.json
@@ -68,6 +68,7 @@
     "banner": "بانر",
     "Project partners": "شركاء المشروع",
     "service_title": "خدمات المشروع",
+    "units_type":  "نوع الوحدات",
     "service_image": "صورة الخدمه",
     "project_service": "خدمات المشروع"
 
