--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,56 +1,57 @@
 {
-    "Projects" : "المشروعات",
-    "Project" : "المشروع",
-    "Customer" : "العميل",
+    "Projects": "المشروعات",
+    "Project": "المشروع",
+    "Customer": "العميل",
     "Permissions": "الصلاحيات",
-    "Admin Managemnt" : " ادارة الادمن",
-    "title" : "العنوان" ,
-    "name" : "الاسم",
-    "is_published" : "منشور",
-    "id" : "م",
-    "Main Image" : "الصورة الاساسية",
-    "slug" : " slug اسم غير رسمي",
-    "Companies" : "الشركات",
-    "Company" : "الشركة",
-    "User" : "المستخدم",
-    "Land_area" : "مساحة الأرض",
+    "Admin Managemnt": " ادارة الادمن",
+    "title": "العنوان",
+    "name": "الاسم",
+    "is_published": "منشور",
+    "id": "م",
+    "Main Image": "الصورة الاساسية",
+    "slug": " slug اسم غير رسمي",
+    "Companies": "الشركات",
+    "Company": "الشركة",
+    "User": "المستخدم",
+    "Annual Reports": "التقارير السنوية",
+    "Land_area": "مساحة الأرض",
     "Utility": "مرافق المشروع ",
     "Utility_title": "اسم المرفق",
-    "utilities" : "المرافق",
+    "utilities": "المرافق",
     "Download": " التنزيلات",
-    "financials" :"القوائم المالية ",
+    "financials": "القوائم المالية ",
     "financial": "القوائم المالية",
-    "Investor relations" : "علاقات المستثمرين",
-    "investor relations blog" : "اعلانات المسثمرين",
+    "Investor relations": "علاقات المستثمرين",
+    "investor relations blog": "اعلانات المسثمرين",
     "About Ladun": "عن لدن ",
-    "About us" : "نبذه عنا",
-    "Company Strcture" : "الهيكل الادارى",
-    "thumbnail" : "الصورة",
-    "content" : "التفاصيل",
-    "attachments" : "المرفقات",
+    "About us": "نبذه عنا",
+    "Company Strcture": "الهيكل الادارى",
+    "thumbnail": "الصورة",
+    "content": "التفاصيل",
+    "attachments": "المرفقات",
     "created_at": "وقت الانشاء",
     "phone": "رقم الجوال",
-    "email" : "البريد الالكتروني",
-    "address" : "العنوان",
-    "attachment" : "ملفات المشروع",
-    "building_area" : "مساحة البناء",
-    "units_number":"عدد الوحدات" ,
+    "email": "البريد الالكتروني",
+    "address": "العنوان",
+    "attachment": "ملفات المشروع",
+    "building_area": "مساحة البناء",
+    "units_number": "عدد الوحدات",
     "models_number": "عدد النموذج",
     "video": "فيديو المشروع",
     "project_video": "فيديو360 ",
     "Media Center": "المركز الاعلامي",
-    "Department" : "القسم",
-    "Region" : "المنطقة",
-    "Departments" : "الأقسام",
+    "Department": "القسم",
+    "Region": "المنطقة",
+    "Departments": "الأقسام",
     "Regions": "المناطق",
     "Department title": "عنوان القسم",
     "Department image": "صورة القسم",
     "Add Department": "إضافة قسم",
     "Assign Region": "اربط المشروع بالمنطقة",
     "Join Us": "انضم الينا",
-    "pages" : "الصفحات",
-    "page" : "الصفحة",
-    "url" : "الرابط الإلكتروني",
+    "pages": "الصفحات",
+    "page": "الصفحة",
+    "url": "الرابط الإلكتروني",
     "Phase": "المرحلة",
     "Phases": "المراحل",
     "Achieve Percentage": "نسبه الانجاز",
@@ -68,8 +69,7 @@
     "banner": "بانر",
     "Project partners": "شركاء المشروع",
     "service_title": "خدمات المشروع",
-    "units_type":  "نوع الوحدات",
+    "units_type": "نوع الوحدات",
     "service_image": "صورة الخدمه",
     "project_service": "خدمات المشروع"
-
 }
