--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,17 +1,18 @@
 {
     "Projects": "المشروعات",
     "Project": "المشروع",
-    "Settings":"إعدادات",
-    "Admin_Management":"ssss",
-    "page_banners":"لافتات الصفحة",
+    "Settings": "إعدادات",
+    "Admin_Management": "ssss",
+    "page_banners": "لافتات الصفحة",
     "Customer": "العميل",
     "Permissions": "الصلاحيات",
-    "Roles":"الأدوار",
+    "Roles": "الأدوار",
     "Admin Managemnt": " ادارة الادمن",
     "title": "العنوان",
     "name": "الاسم",
     "is_published": "منشور",
     "id": "م",
+    "years": "التقارير السنوية",
     "Main Image": "الصورة الاساسية",
     "slug": " slug اسم غير رسمي",
     "Companies": "الشركات",
