--- a/lang/ar.json
+++ b/lang/ar.json
@@ -77,5 +77,7 @@
     "service_title": "خدمات المشروع",
     "units_type": "نوع الوحدات",
     "service_image": "صورة الخدمه",
+    "FAQ": "التعليمات",
+    "faq": "التعليمات",
     "project_service": "خدمات المشروع"
 }
