--- a/lang/ar.json
+++ b/lang/ar.json
@@ -79,5 +79,6 @@
     "service_image": "صورة الخدمه",
     "FAQ": "التعليمات",
     "faq": "التعليمات",
-    "project_service": "خدمات المشروع"
+    "project_service": "خدمات المشروع",
+    "Annual_reports_audit_committee": "التقارير السنوية للجنة المراجعة"
 }
