--- a/lang/ar.json
+++ b/lang/ar.json
@@ -49,7 +49,7 @@
     "Region": "المنطقة",
     "Departments": "الأقسام",
     "Regions": "المناطق",
-
+    "Annual_Reports_Audit_Committee":"ؤسشسشؤ",
     "Department title": "عنوان القسم",
     "Department image": "صورة القسم",
     "Add Department": "إضافة قسم",
