--- a/lang/ar.json
+++ b/lang/ar.json
@@ -31,13 +31,17 @@
     "About Ladun": "عن لدن ",
     "About us": "نبذه عنا",
     "Company Strcture": "الهيكل الادارى",
+    "First name": "الاسم الاول",
+    "Last name": "الاسم الاخير",
     "thumbnail": "الصورة",
+    "Message": "رسالة",
     "content": "التفاصيل",
     "attachments": "المرفقات",
     "created_at": "وقت الانشاء",
     "phone": "رقم الجوال",
     "email": "البريد الالكتروني",
     "address": "العنوان",
+    "Ownership": "الملكية",
     "attachment": "ملفات المشروع",
     "building_area": "مساحة البناء",
     "units_number": "عدد الوحدات",
