--- a/lang/ar.json
+++ b/lang/ar.json
@@ -51,6 +51,7 @@
     "Media Center": "المركز الاعلامي",
     "Department": "القسم",
     "Region": "المنطقة",
+    "Project name": "اسم المشروع",
     "Departments": "الأقسام",
     "Regions": "المناطق",
     "Annual_Reports_Audit_Committee":"ؤسشسشؤ",
