--- a/lang/ar.json
+++ b/lang/ar.json
@@ -18,6 +18,7 @@
     "Companies": "الشركات",
     "Company": "الشركة",
     "User": "المستخدم",
+    "Connects": "التواصل",
     "Annual Reports": "التقارير السنوية",
     "Land_area": "مساحة الأرض",
     "Utility": "مرافق المشروع ",
