feat: Implement settings management with a new database table, Filament resource, and Arabic localization.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -76,6 +76,8 @@
     "developing buildings": "عدد وحدات سكنية قيد التطوير",
     "Accreditation Number": "رقم الاعتماد",
     "logo": "الشعار",
+    "Google Tag Manager ID": "معرف مدير علامات جوجل",
+    "WhatsApp Number": "رقم واتساب",
     "project photos": "صور المشروع",
     "cover photo": "الصورة الخارجيه",
     "banner": "بانر",
